k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hongyoojun-test-d
  namespace: hongyoojun-test
  labels:
    app: hongyoojun-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hongyoojun-test-sample
  template:
    metadata:
      labels:
        app: hongyoojun-test-sample
    spec:
      containers:
      - name: hongyoojun-test-c
        image: ghcr.io/ghddbwns9808/hongyoojun-test:image-REPLACEME
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "768Mi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
