k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hongyoojun-test-sample
  namespace: hongyoojun-test
  labels:
    app: hongyoojun-test-sample
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hongyoojun-test-sample
