k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hongyoojun-test-ingress
  namespace: hongyoojun-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hongyoojun-test(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hongyoojun-test-sample
                port:
                  number: 80
